{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "ee3733fd-e06d-4bc1-bbd0-7b7b983a566a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "c6b6bca0-8c2a-45a5-a57f-0606d21d05b0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "a14503bf-77bf-4e91-a440-7ef61aafc09d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "2b284737-0e29-417b-bb1b-b61cd3e0247d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "429e8eeb-9ff0-4baf-b252-993d58f7dd50",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9a89975c-3e84-408a-a6c9-e4fe594bbd7c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "37f26b08-28a0-44b9-b26a-4dc28da22e86",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ba2b23df-d2cb-4985-8075-53816efb902c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "207e9cd6-6b2a-45f2-b3ae-dd80454af0a6",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse+KeyBoard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "FlappyBirdInput",
            "id": "5df57e5f-ed5d-488b-b1d8-a86099216b2d",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "26647fe8-ed2b-4f46-ae92-2629dc13a0a8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e75c8bc-ecf0-41e1-87b7-4514afc5f1f1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DodgePoop",
            "id": "1062c52d-8048-46d3-8aa9-9b0bd2b7d3f1",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d40d8e52-233d-4689-aafc-661c617e618b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "7c23bfa1-3a0b-4fe2-bb94-a096987df4d4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "babee993-3183-4297-a465-d8376f6a3104",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "59af9d00-a835-48c3-ab02-768458dfbde8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse+KeyBoard",
            "bindingGroup": "Mouse+KeyBoard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}